Bug 253726 - [UI-side compositing] Keyboard scroll should not start if a wheel gesture event is in progress
Summary: [UI-side compositing] Keyboard scroll should not start if a wheel gesture eve...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-10 11:26 PST by Richard Robinson
Modified: 2023-03-13 12:12 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Robinson 2023-03-10 11:26:53 PST
rdar://106563114
Comment 1 Richard Robinson 2023-03-10 13:11:01 PST
Pull request: https://github.com/WebKit/WebKit/pull/11380
Comment 2 EWS 2023-03-13 12:12:43 PDT
Committed 261581@main (f72d588a05aa): <https://commits.webkit.org/261581@main>

Reviewed commits have been landed. Closing PR #11380 and removing active labels.