Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.mm
@@ -70,6 +70,20 @@ void RemoteScrollingTreeMac::displayDidRefresh(PlatformDisplayID)
     serviceScrollAnimations(MonotonicTime::now()); // FIXME: Share timestamp with the rest of the update.
 }
 
+void RemoteScrollingTreeMac::scrollingTreeNodeWillStartScroll(ScrollingNodeID nodeID)
+{
+    RunLoop::main().dispatch([this, nodeID] {
+        RemoteScrollingTree::scrollingTreeNodeWillStartScroll(nodeID);
+    });
+}
+
+void RemoteScrollingTreeMac::scrollingTreeNodeDidEndScroll(ScrollingNodeID nodeID)
+{
+    RunLoop::main().dispatch([this, nodeID] {
+        RemoteScrollingTree::scrollingTreeNodeDidEndScroll(nodeID);
+    });
+}
+
 Ref<ScrollingTreeNode> RemoteScrollingTreeMac::createScrollingTreeNode(ScrollingNodeType nodeType, ScrollingNodeID nodeID)
 {
     switch (nodeType) {
